--- a/src/assets/GlobalStyle.css
+++ b/src/assets/GlobalStyle.css
@@ -1,6 +1,10 @@
 body {
   font-family: sans-serif;
   margin: 0;
+  /* background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(253, 101, 133, 1) 0%, rgba(255, 211, 165, 1) 90%); */
+  /* background-image: radial-gradient(circle 321px at 8.3% 75.7%, rgba(209, 247, 241, 1) 0%, rgba(249, 213, 213, 1) 81%); */
+  /* background-image: linear-gradient(100.5deg, rgba(148, 146, 236, 1) 17.7%, rgba(245, 194, 194, 1) 76.1%); */
+  background-color: lightgrey;
 }
 
 /* a {
@@ -30,10 +34,17 @@ form {
   width: 100%;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+}
+
 .displayInherit {
   display: inherit;
 }
 
 .displayNone {
-  display: none;
+  display: none !important;
 }
