--- a/src/components/elements/style.css
+++ b/src/components/elements/style.css
@@ -43,6 +43,10 @@ label.checkbox {
 }
 
 button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
   border-radius: 5px;
   border: none;
   width: 100%;
@@ -75,4 +79,8 @@ span.error-message {
 
 input:invalid[focused="true"] ~ span.error-message {
   display: block;
+}
+
+img {
+  width: 100%;
 }
