--- a/src/assets/GlobalStyle.css
+++ b/src/assets/GlobalStyle.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 body {
-  font-family: sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
-  /* background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(253, 101, 133, 1) 0%, rgba(255, 211, 165, 1) 90%); */
-  /* background-image: radial-gradient(circle 321px at 8.3% 75.7%, rgba(209, 247, 241, 1) 0%, rgba(249, 213, 213, 1) 81%); */
   /* background-image: linear-gradient(100.5deg, rgba(148, 146, 236, 1) 17.7%, rgba(245, 194, 194, 1) 76.1%); */
   background-color: lightgrey;
 }
@@ -37,7 +38,8 @@ form {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5 {
   margin: 0;
 }
 
@@ -47,4 +49,16 @@ h4 {
 
 .displayNone {
   display: none !important;
+}
+
+@keyframes popup {
+  0% {
+    transform: scale(0.5);
+  }
+  70% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
