--- a/src/components/fragments/styles/titleIcon.css
+++ b/src/components/fragments/styles/titleIcon.css
@@ -7,7 +7,8 @@
   width: 180px;
   height: 50px;
   box-sizing: border-box;
-  cursor: pointer;
+  cursor: pointer !important;
+  font-family: "Open Sans", sans-serif;
 }
 
 .title-icon .image {
