--- a/src/components/fragments/styles/resultBox.css
+++ b/src/components/fragments/styles/resultBox.css
@@ -8,9 +8,9 @@
   animation: popup 370ms;
 }
 
-.win,
-.lose,
-.draw {
+.result-win,
+.result-lose,
+.result-draw {
   width: 100%;
   height: 100%;
   display: grid;
@@ -18,16 +18,16 @@
   border-radius: 10px;
 }
 
-.win {
+.result-win {
   background-color: green;
   transform: rotate(45deg);
 }
 
-.lose {
+.result-lose {
   background-color: red;
   transform: rotate(-45deg);
 }
 
-.draw {
+.result-draw {
   background-color: orange;
 }
