--- a/src/components/templates/styles/createNewGame.css
+++ b/src/components/templates/styles/createNewGame.css
@@ -8,7 +8,7 @@
   justify-content: space-evenly;
 }
 
-.new-game h1 {
+.new-game .title-page {
   position: absolute;
   top: 25px;
   cursor: default;
