--- a/src/components/fragments/styles/listOfChoices.css
+++ b/src/components/fragments/styles/listOfChoices.css
@@ -1,13 +1,20 @@
+.list-of-choices {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 25px;
+}
+
 .list-of-choices h3 {
-  font-size: 30px;
+  font-size: 23px;
   text-align: center;
-  margin-bottom: 10px;
 }
 
 .choices {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 13px;
+  margin-top: 15px;
 }
 
 .choices .image img {
@@ -19,6 +26,7 @@
   width: 150px;
   padding: 10px;
   border-radius: 15px;
+  transition: transform 0.2s;
 }
 
 .image.clicked {
