--- a/src/components/fragments/styles/resultBox.css
+++ b/src/components/fragments/styles/resultBox.css
@@ -18,6 +18,18 @@
   border-radius: 10px;
 }
 
+.result-player {
+  background-color: orangered;
+  box-shadow: 0 0 10px 2px black;
+  color: white;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  text-align: center;
+  border-radius: 10px;
+}
+
 .result-win {
   background-color: green;
   transform: rotate(45deg);
