--- a/src/components/elements/style.css
+++ b/src/components/elements/style.css
@@ -2,6 +2,7 @@ input[type="text"],
 input[type="email"],
 input[type="password"],
 input[type="date"],
+textarea,
 select {
   border-radius: 5px;
   height: 40px;
@@ -11,6 +12,12 @@ select {
   font-size: 16px;
   width: 100%;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+
+textarea {
+  height: auto;
+  resize: none;
 }
 
 input[type="date"],
@@ -18,10 +25,16 @@ select {
   cursor: pointer;
 }
 
+input[type="file"] {
+  display: none;
+  cursor: pointer;
+}
+
 input[type="text"]:hover,
 input[type="email"]:hover,
 input[type="password"]:hover,
 input[type="date"]:hover,
+textarea:hover,
 select:hover {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
@@ -30,6 +43,7 @@ input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="date"]:focus,
+textarea:focus,
 select:focus {
   border: 1px solid transparent;
   box-shadow: 0 0 4px 2px rgba(0, 123, 255, 0.562);
@@ -82,4 +96,15 @@ input:invalid[focused="true"] ~ span.error-message {
 
 img {
   width: 100%;
+}
+
+img.center-img {
+  width: 100%; /* Mengisi lebar parent */
+  height: 100%; /* Mengisi tinggi parent */
+  object-fit: cover; /* Memastikan gambar terpotong dengan benar */
+  position: absolute; /* Menempatkan gambar di tengah */
+  top: 50%; /* Geser ke atas */
+  left: 50%; /* Geser ke kiri */
+  transform: translate(-50%, -50%); /* Pusatkan gambar */
+  object-position: center; /* Menempatkan gambar di tengah-tengah */
 }
