--- a/src/components/fragments/styles/profileIcon.css
+++ b/src/components/fragments/styles/profileIcon.css
@@ -1,9 +1,11 @@
 .profile-icon {
   display: grid;
   place-items: center;
-  width: auto;
-  border: 1px solid rgba(102, 102, 102, 0);
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid rgba(102, 102, 102, 0); */
+  border-radius: 100%;
   overflow: hidden;
   cursor: pointer;
+  position: relative;
 }
