--- a/src/components/templates/Sidebar/userProfile.css
+++ b/src/components/templates/Sidebar/userProfile.css
@@ -16,12 +16,34 @@
 .profile-picture {
   align-self: center;
   max-width: 230px;
+  min-width: 230px;
+  height: 230px;
   border-radius: 50%;
-  border: 5px solid black;
+  border: 4px solid black;
   overflow: hidden;
-  display: grid;
-  align-items: center;
+  /* display: grid; */
+  /* align-items: center; */
   margin: 20px 0;
+  position: relative;
+  cursor: pointer;
+}
+
+.picture-full {
+  position: absolute;
+  inset: 0;
+  display: grid;
+  place-items: center;
+  right: -300%;
+  backdrop-filter: blur(10px);
+  z-index: 5;
+  animation: popup 170ms;
+}
+
+.view-picture {
+  position: absolute;
+  aspect-ratio: 1/1;
+  object-fit: contain;
+  height: 80vh;
 }
 
 .user-bio {
