fix responsive design

--- a/src/assets/GlobalStyle.css
+++ b/src/assets/GlobalStyle.css
@@ -66,11 +66,20 @@ p {
   }
 }
 
-@keyframes sidebarOpen {
+@keyframes LeftToRight {
   from {
     transform: translateX(-100%);
   }
   to {
     transform: translateX(0%);
+  }
+}
+
+@keyframes TopToBottom {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0%);
   }
 }
