--- a/src/components/fragments/styles/gameBox.css
+++ b/src/components/fragments/styles/gameBox.css
@@ -3,15 +3,22 @@
   height: 50px;
   border-radius: 5px;
   color: white;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   margin: 10px;
   background-image: linear-gradient(110.3deg, rgba(73, 93, 109, 1) 4.3%, rgba(49, 55, 82, 1) 96.7%);
   display: grid;
   place-items: center;
   cursor: pointer;
+  font-family: "Open Sans";
 }
 
 .game-box:hover {
   box-shadow: 0 0 15px -3px orangered;
   color: orange;
+}
+
+@media only screen and (max-width: 850px) {
+  .game-box {
+    font-size: 1.2rem;
+  }
 }
