--- a/src/components/fragments/styles/listOfChoices.css
+++ b/src/components/fragments/styles/listOfChoices.css
@@ -33,3 +33,9 @@
   background: gray;
   box-shadow: 0 0 23px 3px orange;
 }
+
+@media only screen and (max-width: 500px) {
+  .choices .image {
+    width: 110px;
+  }
+}
