--- a/src/components/templates/Navbar/profileNav.css
+++ b/src/components/templates/Navbar/profileNav.css
@@ -13,3 +13,11 @@
   width: 3rem;
   height: 3rem;
 }
+
+.profile-nav .icon img {
+  background-color: white;
+}
+
+.profile-nav .icon:active {
+  transform: scale(0.9);
+}
