--- a/src/components/templates/Sidebar/settings.css
+++ b/src/components/templates/Sidebar/settings.css
@@ -13,14 +13,21 @@
 .setting-back-btn {
   /* color: black;
   background-color: white; */
-  margin: 0px 0px 10px -10px;
-  width: 20%;
+  margin-bottom: 10px;
+  width: 70px;
   padding: 5px;
   border-radius: 7px;
   font-weight: bolder;
   color: orange;
   border: 1px solid orange;
   cursor: pointer;
+}
+
+.setting-back-btn:active {
+  color: black;
+  border: 1px solid black;
+  background-color: orange;
+  transform: scale(0.97);
 }
 
 .menu-setting {
@@ -37,7 +44,7 @@
   display: flex;
   align-items: center;
   gap: 13px;
-  width: 90%;
+  width: auto;
 }
 
 .layout-setting button,
@@ -47,10 +54,12 @@
   bottom: -3px;
 }
 
-.menu-setting .list:nth-child(4) .popover {
+.menu-setting .list .popover {
+  width: 295px;
   bottom: 0px;
 }
-.menu-setting .list:nth-child(4) .popover .popover-child div:first-child {
+
+.menu-setting .list .popover .popover-child div:first-child {
   color: red;
 }
 
@@ -60,6 +69,11 @@
 
 .menu-setting .list:active {
   background-color: #848484;
+}
+
+.menu-setting .list:nth-child(4):hover,
+.menu-setting .list:nth-child(4):active {
+  background-color: transparent;
 }
 
 .list .icon {
