--- a/src/components/templates/Sidebar/userProfile.css
+++ b/src/components/templates/Sidebar/userProfile.css
@@ -19,31 +19,15 @@
   min-width: 230px;
   height: 230px;
   border-radius: 50%;
-  border: 4px solid black;
+  border: 3px solid black;
   overflow: hidden;
-  /* display: grid; */
-  /* align-items: center; */
   margin: 20px 0;
   position: relative;
   cursor: pointer;
 }
 
-.picture-full {
-  position: absolute;
-  inset: 0;
-  display: grid;
-  place-items: center;
-  right: -300%;
-  backdrop-filter: blur(10px);
-  z-index: 5;
-  animation: popup 170ms;
-}
-
-.view-picture {
-  position: absolute;
-  aspect-ratio: 1/1;
-  object-fit: contain;
-  height: 80vh;
+.profile-picture img {
+  background-color: white;
 }
 
 .user-bio {
