--- a/src/components/templates/styles/dashboardGame.css
+++ b/src/components/templates/styles/dashboardGame.css
@@ -1,3 +1,7 @@
+.dashboard {
+  width: 100%;
+}
+
 .game {
   display: flex;
   justify-content: space-evenly;
@@ -6,10 +10,13 @@
 .sort-room {
   max-width: 200px;
   margin-bottom: 30px;
+  margin-left: 5px;
 }
+
 .game-rooms {
   display: grid;
   place-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 30px;
 }
