--- a/src/components/templates/styles/gameHistory.css
+++ b/src/components/templates/styles/gameHistory.css
@@ -6,7 +6,13 @@
   width: 100%;
 }
 
+.table-wrapper .title-page {
+  top: 65px;
+  z-index: 5;
+}
+
 .styled-table {
+  margin-top: 50px;
   width: 90%;
   border-collapse: collapse;
   background-color: #f7f7f7;
@@ -36,10 +42,10 @@
   background-color: #ddd;
 }
 
-.styled-table caption {
+/* .styled-table caption {
   caption-side: top;
   margin-bottom: 10px;
-}
+} */
 
 /* .styled-table h1 {
   font-size: 4em;
@@ -58,4 +64,27 @@
 .styled-table .draw {
   color: orange;
   font-weight: bolder;
+}
+
+@media only screen and (max-width: 500px) {
+  .table-wrapper .title-page h1 {
+    text-align: center;
+    font-size: 20px !important;
+  }
+
+  .table-wrapper .title-page {
+    top: 75px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .time-column {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .table-wrapper .title-page h1 {
+    font-size: 32px;
+  }
 }
