--- a/src/components/templates/styles/loginForm.css
+++ b/src/components/templates/styles/loginForm.css
@@ -13,3 +13,16 @@
 .login-form h1 {
   margin-top: 25px;
 }
+
+@media only screen and (max-width: 365px) {
+  .login-form {
+    width: 100%;
+    padding: 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .login-form {
+    box-shadow: none;
+  }
+}
