--- a/src/layouts/gameLayout/gameLayout.css
+++ b/src/layouts/gameLayout/gameLayout.css
@@ -3,3 +3,16 @@
   top: 10px;
   left: 10px;
 }
+
+@media only screen and (max-width: 700px) {
+  .game-layout {
+    left: 5px;
+  }
+
+  .game-layout .title-icon {
+    width: auto;
+  }
+  .game-layout .title-icon h2 {
+    display: none;
+  }
+}
