--- a/src/components/templates/Sidebar/userProfile.css
+++ b/src/components/templates/Sidebar/userProfile.css
@@ -11,6 +11,12 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
+  color: white !important;
+}
+
+.profile h3 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
 }
 
 .profile-picture {
