--- a/src/layouts/mainLayout/mainLayout.css
+++ b/src/layouts/mainLayout/mainLayout.css
@@ -21,7 +21,7 @@
 .picture-full {
   display: grid;
   place-items: center;
-  position: absolute;
+  position: fixed;
   inset: 0;
   backdrop-filter: blur(10px);
   z-index: 5;
