--- a/src/components/fragments/styles/loader.css
+++ b/src/components/fragments/styles/loader.css
@@ -1,34 +1,4 @@
-.dashboard {
-  width: 100%;
-}
-
-.game-bar {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.sort-room {
-  max-width: 200px;
-  margin-bottom: 30px;
-  margin-left: 5px;
-}
-
-.rooms-container {
-  display: grid;
-  place-items: center;
-  width: 100%;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 30px;
-}
-
-.rooms-container-2 {
-  margin-top: 60px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-
-.box-loader {
+.box-loader-circle {
   width: 100px;
   height: 100px;
 }
