--- a/src/components/templates/Sidebar/sidebar.css
+++ b/src/components/templates/Sidebar/sidebar.css
@@ -30,6 +30,7 @@
 }
 
 .option-sidebar .profile,
+.option-sidebar .search,
 .option-sidebar .setting {
   display: grid;
   place-items: center;
@@ -41,10 +42,10 @@
 
 .option-sidebar .profile .icon .profile-icon {
   width: 2.7rem;
-  height: 2.7rem;
 }
 
-.option-sidebar .setting .icon {
+.option-sidebar .setting .icon,
+.option-sidebar .search .icon {
   width: 33px;
 }
 
@@ -53,11 +54,13 @@
 } */
 
 .option-sidebar .profile:hover,
+.option-sidebar .search:hover,
 .option-sidebar .setting:hover {
   background-color: #848484;
 }
 
 .option-sidebar .profile:active,
+.option-sidebar .search:active,
 .option-sidebar .setting:active {
   background-color: #535353;
   transform: scale(0.9);
@@ -94,9 +97,10 @@
   }
 
   .option-sidebar .profile,
+  .option-sidebar .search,
   .option-sidebar .setting {
     place-items: center;
-    width: 50%;
+    width: 100%;
     height: 35px;
     margin-bottom: -2px;
     border-radius: 0;
@@ -113,13 +117,20 @@
     color: white;
   }
 
+  .option-sidebar .search::before {
+    content: "Search";
+    color: white;
+  }
+
   .option-sidebar .icon {
     display: none;
   }
 
   .option-sidebar .profile:hover,
+  .option-sidebar .search:hover,
   .option-sidebar .setting:hover,
   .option-sidebar .profile:active,
+  .option-sidebar .search:active,
   .option-sidebar .setting:active {
     background-color: transparent;
     transform: scale(1);
