--- a/src/components/templates/Sidebar/userSearch.css
+++ b/src/components/templates/Sidebar/userSearch.css
@@ -47,7 +47,7 @@
   max-height: 530px;
 }
 
-.result-search .profile-wrapper {
+.result-search .profile-box {
   background-image: linear-gradient(109.6deg, rgba(255, 174, 0, 1) 1.2%, rgba(255, 0, 0, 1) 90.2%);
   border-radius: 10px;
   height: 4rem;
@@ -58,12 +58,12 @@
   min-width: 230px;
 }
 
-.result-search .profile-wrapper:hover {
+.result-search .profile-box:hover {
   transform: scale(1.1);
   transition: 300ms;
 }
 
-.result-search .profile-wrapper .profile-nav {
+.result-search .profile-box .profile-nav {
   flex-direction: row-reverse;
   color: black;
 }
