--- a/src/layouts/mainLayout/mainLayout.css
+++ b/src/layouts/mainLayout/mainLayout.css
@@ -4,7 +4,7 @@
 
 .content {
   display: flex;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 .sidebar-wrap {
@@ -47,6 +47,8 @@
   }
 
   .child-wrap {
+    margin: 2px;
+    margin-top: 63px;
     overflow: hidden;
   }
 
