content sidebar responsive

--- a/src/components/templates/Sidebar/sidebar.css
+++ b/src/components/templates/Sidebar/sidebar.css
@@ -137,8 +137,8 @@
   }
 }
 
-@media only screen and (min-height: 900px) {
+/* @media only screen and (min-height: 900px) {
   .content-sidebar {
     height: 90%;
   }
-}
+} */
