implement eslint standard styles with custom rules

--- a/src/components/elements/style.css
+++ b/src/components/elements/style.css
@@ -91,7 +91,7 @@ span.error-message {
   display: none;
 }
 
-input:invalid[focused="true"] ~ span.error-message {
+input:invalid[data-focused="true"] ~ span.error-message {
   display: block;
 }
 
